[project]
name = "gvtop"
version = "0.0.2"
description = "🎮 Material You TUI for monitoring NVIDIA GPUs"
dependencies = [
    "pynvml",
    "psutil"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[project.scripts]
gvtop = "gvtop.gvtop:main"
