[project]
name = "gvtop"
version = "0.0.3"
description = "🎮 Material You TUI for monitoring NVIDIA GPUs"
dependencies = [
    "nvidia-ml-py",
    "psutil"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[project.scripts]
gvtop = "gvtop.gvtop:main"

[tool.pixi.project]
name = "gvtop"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gvtop = { path = ".", editable = false }
