[project]
name = "gvtop"
version = "0.0.3"
description = "🎮 Material You TUI for monitoring NVIDIA GPUs"
dependencies = ["nvidia-ml-py", "psutil"]

[project.scripts]
gvtop = "gvtop.gvtop:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gvtop*"]

[tool.pixi.project]
name = "gvtop"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gvtop = { path = ".", editable = false }
